[REVISION 20060912]

[FIXED] 'Before updating scaffolding from new DB schema, try creating a table for your model (<model>)' when running ./script/generate scaffold <model>. Seems the scaffold sandbox dynamically creates classes which have no name.

[REVISION 20060911]

[CHANGED] Revert to nil defaults--as opposed to blank--now that the MySQL behaviour has been patched in redhillonrails_core.

[REVISION 20060909]

[NEW] Dependency on RedHill on Rails Core.

[NEW] validates_uniqueness_of for associations.

[FIXED] validates_presence_of for associations.

[REVISION 20060908]

[FIXED] validates_presence_of not being applied under MySQL; empty defaults are represented as blank rather than nil.

[NEW] validates_uniqueness_of for associations.

[REVISION 20060818]

[FIXED] 'Before updating scaffolding from new DB schema, try creating a table for your model (<model>)' when running ./script/generate scaffold <model>.

[FIXED] 'relation "system_settings" does not exist' when running a migrate with system_settings plugin installed.

[REVISION 20060816]

[FIXED] Overly greedy regex ignoring all date/time columns.

[REVISION 20060812]

[CHANGED] Documentation updated to reflect the fact that no further action is required once the plugin is installed.

[REVISION 20060812]

[FIXED] Documentation mentions :integer => true options; this should have read :only_integer => true.

[REVISION 20060803]

[FIXED] Revision 50 comments out the validates_presence_of magic on line 13 in belongs_to_with_schema_validations.

[REVISION 20060802]

[NEW] Support for validates_uniqueness_of for single-column unique indexes.

[CHANGED] Error message for boolean fields to be the same as the default for validates_presence_of

[REVISION 20060723]

[FIXED] Workaround for a "feature" of the way validates_presence_of handles boolean fields. See http://dev.rubyonrails.org/ticket/5090 and http://dev.rubyonrails.org/ticket/3334

[REVISION 20060719]
